--- a/DeltaSYS/ViewController/public_html/WEB-INF/web.xml
+++ b/DeltaSYS/ViewController/public_html/WEB-INF/web.xml
@@ -34,6 +34,10 @@
     <servlet-name>DSFoliosController</servlet-name>
     <servlet-class>controllers.DSFoliosController</servlet-class>
   </servlet>
+  <servlet>
+    <servlet-name>DsPerfilesReglamentoController</servlet-name>
+    <servlet-class>DsPerfilesReglamentoController</servlet-class>
+  </servlet>
   <servlet-mapping>
     <servlet-name>Faces Servlet</servlet-name>
     <url-pattern>/faces/*</url-pattern>
@@ -49,5 +53,9 @@
   <servlet-mapping>
     <servlet-name>DSFoliosController</servlet-name>
     <url-pattern>/DSFoliosController</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>DsPerfilesReglamentoController</servlet-name>
+    <url-pattern>/DsPerfilesReglamentoController</url-pattern>
   </servlet-mapping>
 </web-app>
